# khr2026_team1_rspi

./: .gitignore  .gitmodules  CLAUDE.md  README.md  auto_routing_plan.md  frames_2026-02-21_20.21.41.gv  frames_2026-02-22_15.47.57.gv  frames_2026-02-22_16.26.02.gv  frames_2026-02-23_14.43.16.gv  frames_2026-02-23_15.37.49.gv  frames_2026-02-23_15.39.16.gv  frames_2026-02-25_19.22.37.gv  frames_2026-02-27_16.33.45.gv  frames_2026-02-27_16.35.13.gv  frames_2026-02-27_16.35.22.gv  frames_2026-02-27_17.18.13.gv  frames_2026-02-27_18.08.52.gv  hardware_requirements.md  hardware_todo.md  rotate_fix_plan.md  sim_start.sh  simulation_coordinate_issue.md
src/auto_nav/: CMakeLists.txt  package.xml  pyproject.toml
src/auto_nav/config/: amcl_params.yaml  ekf_params.yaml  field_dimensions.yaml  khr2026_team1.rviz  laser_filters.yaml  nav2_params.yaml  ring_colors.yaml  slam_localization_params.yaml  slam_mapping_params.yaml  waypoints.yaml  waypoints_relative.yaml
src/auto_nav/launch/: auto_nav_launch.py  mapping_launch.py
src/auto_nav/scripts/: generate_field_map.py  generate_waypoints.py  launch_cmd_vel_bridge.py  launch_cylinder_detector.py  launch_imu_publisher.py  launch_odometry.py  launch_ring_alignment.py  launch_routing.py  launch_scan_relay.py  launch_yagura_position.py  nav_cli.py  reload_nav2_params.py  reset_esp32_serial.py  ring_align_tuner.py
src/auto_nav/src/auto_nav/: __init__.py  cmd_vel_bridge_node.py  cylinder_detector_node.py  imu_publisher_node.py  odometry_node.py  ring_alignment_node.py  routing_node.py  scan_relay_node.py  yagura_position_node.py
src/bt_communication/: CMakeLists.txt  package.xml  pyproject.toml
src/bt_communication/scripts/: bluetooth_node  launch.py
src/bt_communication/src/bt_communication/: __init__.py  bluetooth.py  constants.py  gatt_server.py  ros2_node.py
src/bt_communication/tests/: test_bt_converters.py
src/khr2026_team1_rspi/: CMakeLists.txt  package.xml  pyproject.toml
src/khr2026_team1_rspi/scripts/: publisher.py
src/khr2026_team1_rspi/src/: arduino_test.cpp  esp32_test.cpp
src/khr2026_team1_rspi/src/khr2026_team1_rspi/: publisher.py
src/khr2026_team1_simulation/: CMakeLists.txt  package.xml
src/khr2026_team1_simulation/config/: bridge.yaml  lifecycle_map_server.yaml
src/khr2026_team1_simulation/launch/: minimal_sim.launch.py  minimal_test.launch.py  sim.launch.py  simulation.launch.py
src/khr2026_team1_simulation/maps/: field_synthetic.pgm  field_synthetic.yaml
src/khr2026_team1_simulation/scripts/: auto_bt_sequence_sim.py  generate_field_sdf.py  generate_sdf_from_map.py  invert_cmd_vel.py
src/khr2026_team1_simulation/tests/integration/: test_simulation_connectivity.py
src/khr2026_team1_simulation/urdf/: camera.xacro  hand.xacro  lidar.xacro  mecanum_wheel.xacro  robot.urdf.xacro
src/khr2026_team1_simulation/worlds/: generated_walls.sdf  khr2026_field.sdf
src/object_detector/: package.xml  setup.py
src/object_detector/object_detector/: object_detector_node.py
src/py_test/: CMakeLists.txt  README.md  package.xml  pyproject.toml
src/py_test/scripts/: publisher.py
src/py_test/src/py_test/: __init__.py
src/robot_control/: CMakeLists.txt  package.xml  pyproject.toml
src/robot_control/config/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/robot_control/launch/: robot_bringup.launch.py
src/robot_control/maps/: field.pgm  field.yaml
src/robot_control/rviz/: nav2.rviz  sim.rviz
src/robot_control/scripts/: create_map.py  debug_opt.py  generate_map_from_svg.py  gz_attachment_node.py  hand_bridge_node.py  launch.py  mission_control_node.py  rosbridge_simulator.py  scoring_node.py  sim_monitor.py  task_optimizer_standalone.py  task_planner.py  verify_control_output.py
src/robot_control/src/robot_control/: __init__.py  constants.py  hands.py  heading_pid.py  m3508.py  ros2_node.py  scoring.py  vec2.py
src/robot_control/src/robot_control/mission_logic/: manager.py  planner.py  rules.py  state.py
src/robot_control/tests/: conftest.py  test_heading_pid.py  test_m3508.py  test_scoring.py  test_simulator.py  test_task_planner_logic.py  test_vec2.py
src/robot_control/tests/integration/: test_integration_flow.py  test_localization_connectivity.py  test_minimal_connectivity.py  test_mission_control_logic.py
src/robot_control/tests/unit/: test_lidar_diagnostics.py  test_lidar_rotation.py  test_m3508.py  test_rules.py  test_vec2.py
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: CrabMechanism.msg  FeedbackPIDTerms.msg  HandMessage.msg  IMUValues.msg  RingMechanism.msg  WheelMessage.msg  YaguraMechanism.msg
src/web_control/: CMakeLists.txt  package.xml  pyproject.toml
src/web_control/scripts/: launch_web_server.py
src/web_control/src/web_control/: __init__.py  web_server_node.py
