<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detector</name>
  <version>0.0.0</version>
  <description>Object detection for KHR 2026</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
